--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
     </div>
   </nav> -->
   <div id="page-container">
-    <div id="chatbox" class="page show">
+    <div id="chatbox" class="page">
       <div class="chat-wrapper">
         <!-- Generated messages goes here -->
       </div>
     </div>
-    <div id="result" class="page">
-      <h2 class="unit-name">Unit1</h2>
+    <div id="result" class="page show">
+      <h2 class="unit-name">Sample Unit Title</h2>
       <div class="percent-wrapper">
-        <span id="percent-label">50%</span>
         <div class="progress-bar">
           <div class="bar"></div>
         </div>
+        <span id="percent-label">100%</span>
       </div>
       <div class="button-wrapper">
         <button type="button">Select Unit</button>
