--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
   <script src="scripts/jquery-3.1.1.min.js"></script>
+  <script src="scripts/result.js"></script>
   <script src="scripts/chatbox.js"></script>
   <link rel="stylesheet" type="text/css" href="styles/css/index.css">
 </head>
@@ -30,12 +31,12 @@
       </div>
     </div>
     <div id="result" class="page show">
-      <h2 class="unit-name">Sample Unit Title</h2>
+      <h2 class="unit-name"></h2>
       <div class="percent-wrapper">
         <div class="progress-bar">
           <div class="bar"></div>
         </div>
-        <span id="percent-label">100%</span>
+        <span id="percent-label">0%</span>
       </div>
       <div class="button-wrapper">
         <button type="button">Select Unit</button>
